# sql-parse

./: Cargo.toml  LICENSE.TXT  README.md
.github/workflows/: rust.yml
src/: alter.rs  create.rs  data_type.rs  delete.rs  drop.rs  expression.rs  identifier.rs  insert.rs  insert_replace.rs  issue.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  qualified_name.rs  rename.rs  replace.rs  select.rs  span.rs  sstring.rs  statement.rs  truncate.rs  update.rs  with_query.rs
