[package]
name = "sql-parse"
version = "0.1.1"
edition = "2021"
authors = ["Jakob Truelsen <antialize@gmail.com>"]
keywords = [ "mysql", "sql", "lexer", "parser" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/antialize/sql-parse/"
homepage = "https://github.com/antialize/sql-parse/"
description = "Parser for sql"